fix layout code

--- a/angular-project/src/app/app.component.html
+++ b/angular-project/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-login></app-login>
+<h1>{{title}}</h1>
+<nav>
+  <a routerLink="/register">Register</a>
+  <br>
+  <a routerLink="/login">login</a>
+  <br>
+  <a routerLink="/admin/edit">Admin edit</a>
+</nav>
+<router-outlet></router-outlet>
