--- a/angular-project/src/app/auth/login/login.component.html
+++ b/angular-project/src/app/auth/login/login.component.html
@@ -1,9 +1,8 @@
-<form name="login" ng-controller="ExampleController">
+<form name="login">
     <label igxLabel for="name">Name</label>
-    <input type="text" name="name" ngModel="name" required>
+    <input type="text" id="username" ngModel="username" name="username">
     <label igxLabel for="email">Email</label>
     <input type="text" ng-pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" name="email" ngModel="email">
     <label igxLabel for="password">Password</label>
     <input type="text" name="password" ngModel="password">
-    <h2>{{ name }}</h2>
 </form>
